--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "clean": "npx shadow-cljs clean",
     "frontend": "npx shadow-cljs watch frontend"
   },
   "devDependencies": {
     "shadow-cljs": "2.28.20"
+  },
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
