Refactor HTTP server and request handling to use core.async for improved asynchronous processing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "cSpell.words": [
+        "aset",
         "defmethod",
         "defmulti",
         "defn",
+        "doseq",
+        "extname",
         "keywordize",
         "linkpage",
         "println"
