Update VSCode settings and refactor state management in frontend store

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,12 @@
         "defmethod",
         "defmulti",
         "defn",
+        "defonce",
         "doseq",
         "extname",
         "keywordize",
         "linkpage",
+        "pprint",
         "println"
     ]
 }
