Refactor HTTP response handling and improve routing state management in frontend and backend

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,11 @@
         "keywordize",
         "linkpage",
         "mapcat",
+        "multimethod",
+        "popstate",
         "pprint",
-        "println"
+        "println",
+        "pushstate",
+        "replacestate"
     ]
 }
