--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "defonce",
         "doseq",
         "extname",
+        "fieldset",
         "keywordize",
         "linkpage",
         "mapcat",
