Refactor project structure to rename from linkpage to moviefinder, consolidate context and authentication handling, and implement new UI components

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
         "extname",
         "fieldset",
         "keywordize",
-        "linkpage",
+        "moviefinder",
         "mapcat",
         "multimethod",
         "popstate",
