Add pglite database connection implementation and update frontend structure

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,9 +9,10 @@
         "extname",
         "fieldset",
         "keywordize",
-        "moviefinder",
         "mapcat",
+        "moviefinder",
         "multimethod",
+        "pglite",
         "popstate",
         "pprint",
         "println",
