Update start script in package.json to use Node instead of Bun for backend execution

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "frontend": "npx shadow-cljs watch frontend",
     "backend": "npx shadow-cljs watch backend",
     "watch": "npx concurrently \"npm run frontend\" \"npm run backend\"",
-    "start": "bun --watch out/backend/main.js",
+    "start": "node out/backend/main.js",
     "preview": "npm install && npm run build && npm run start"
   },
   "devDependencies": {
