Refactor core modules and update import paths to improve project structure

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "pprint",
         "println",
         "pushstate",
-        "replacestate"
+        "replacestate",
+        "tmdb"
     ]
 }
