Add x-mark icon and implement toast close functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
         "extname",
         "fieldset",
         "keywordize",
+        "Linecap",
+        "Linejoin",
         "mapcat",
         "moviefinder",
         "multimethod",
