Implement test configuration and refactor media database query with TMDB API integration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "defmulti",
         "defn",
         "defonce",
+        "dissoc",
         "doseq",
         "extname",
         "fieldset",
@@ -12,6 +13,7 @@
         "Linecap",
         "Linejoin",
         "mapcat",
+        "mapv",
         "moviefinder",
         "multimethod",
         "pglite",
