--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "bun x shadow-cljs watch frontend backend",
     "stop": "bun x shadow-cljs stop frontend backend",
     "start": "bun out/backend/main.js",
-    "preview": "bun install && bun run build && bun run start"
+    "preview": "bun install && bun run build && bun run start",
+    "test": "clear && bun x shadow-cljs compile test && bun x shadow-cljs test"
   },
   "devDependencies": {
     "shadow-cljs": "2.28.20"
