Refactor map key conversion and TMDB API spec handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "dissoc",
         "doseq",
         "extname",
+        "fdef",
         "fieldset",
         "keywordize",
         "Linecap",
