--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,9 +8,11 @@
         "defonce",
         "dissoc",
         "doseq",
+        "doto",
         "extname",
         "fdef",
         "fieldset",
+        "gobj",
         "keywordize",
         "Linecap",
         "Linejoin",
