Remove unused `@electric-sql/pglite` dependency from project configuration, update `cSpell` settings for improved spell checking, and refactor frontend components to enhance state management and code organization. Additionally, delete obsolete database connection implementation files to streamline the codebase.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,34 +1,37 @@
 {
-    "cSpell.words": [
-        "aget",
-        "aset",
-        "chans",
-        "defmethod",
-        "defmulti",
-        "defn",
-        "defonce",
-        "dissoc",
-        "doseq",
-        "doto",
-        "extname",
-        "fdef",
-        "fieldset",
-        "gobj",
-        "honeysql",
-        "keywordize",
-        "Linecap",
-        "Linejoin",
-        "mapcat",
-        "mapv",
-        "moviefinder",
-        "multimethod",
-        "pglite",
-        "popstate",
-        "pprint",
-        "println",
-        "pushstate",
-        "replacestate",
-        "seancorfield",
-        "tmdb"
-    ]
+  "cSpell.words": [
+    "aget",
+    "aset",
+    "chans",
+    "defmethod",
+    "defmulti",
+    "defn",
+    "defonce",
+    "defprotocol",
+    "deftype",
+    "dissoc",
+    "doseq",
+    "doto",
+    "extname",
+    "fdef",
+    "fieldset",
+    "gobj",
+    "honeysql",
+    "keywordize",
+    "Linecap",
+    "Linejoin",
+    "mapcat",
+    "mapv",
+    "moviefinder",
+    "mult",
+    "multimethod",
+    "pglite",
+    "popstate",
+    "pprint",
+    "println",
+    "pushstate",
+    "replacestate",
+    "seancorfield",
+    "tmdb"
+  ]
 }
