Enhance toast notification management and integrate swiper slide change handling in frontend components. Refactor state reducers for improved clarity and organization, ensuring consistent handling of toast IDs and removal processes. Update `screen` component to emit screen change events and adjust `home` component to manage swiper events effectively.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,8 @@
     "extname",
     "fdef",
     "fieldset",
+    "filterv",
+    "fnil",
     "gobj",
     "honeysql",
     "keywordize",
@@ -34,6 +36,7 @@
     "pushstate",
     "replacestate",
     "seancorfield",
+    "swiperslidechange",
     "tmdb"
   ]
 }
