Refactor package.json scripts for improved backend execution and streamline watch command. Update .vscode settings to include additional ClojureScript extensions. Enhance frontend.cljs by optimizing screen handling and state management, replacing go-loops with take-every! for better performance. Adjust current_user backend and frontend logic for consistency in user state management. Improve event handling in verify_code.cljs and streamline media_db interactions in home.cljs. Update core.async references across multiple files for uniformity.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,9 @@
     "autorun",
     "chans",
     "cloc",
+    "clojurescript",
+    "concatv",
+    "datascript",
     "defmethod",
     "defmulti",
     "defn",
