--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "backend": "bun run out/backend/main.js",
     "build": "bun x shadow-cljs release frontend backend",
     "clean": "bun x shadow-cljs clean",
     "open": "open http://localhost:9630",
-    "watch": "bun x shadow-cljs watch frontend backend browser-test",
+    "watch": "bun x shadow-cljs watch frontend backend",
     "dev": "bun run open && bun run watch",
     "stop": "bun x shadow-cljs stop frontend backend",
-    "start": "bun out/backend/main.js",
+    "start": "bun run backend",
     "preview": "bun install && bun run build && bun run start",
     "test": "clear && bun x shadow-cljs compile test && bun x shadow-cljs test",
     "docker:preview": "docker build -t moviefinder-app . && docker run -p 9630:9630 moviefinder-app",
