Update authentication flow and UI components
- Added logout functionality by integrating `logout.backend` and `logout.frontend` namespaces into the authentication system.
- Modified button types in the login components to standardize button definitions.
- Enhanced session management in `kv.edn` with updated timestamps.
- Improved event handling in UI components to utilize pointer events for better user interaction.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,9 +38,11 @@
     "multimethod",
     "namespacing",
     "pglite",
+    "pointerdown",
     "popstate",
     "postwalk",
     "pprint",
+    "pressdown",
     "println",
     "pushstate",
     "replacestate",
